--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=spring_start
+#dataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/java_spring
+spring.datasource.username=root
+spring.datasource.password=malawidoc01
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
